# OpenGL-Game

./: .gitignore  CMakeLists.txt
assets/: fragment.glsl  vertex.glsl
assets/shaders/: chunk.frag  dot.fs  fragment.glsl  highlight.frag  hud.frag  hud.vs  light.fs  light.vs  lighting.frag  lighting.fs  lighting.vs  vertex.glsl
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
src/: block.cpp  block.hpp  blocks.cpp  blocks.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  fpsCounter.cpp  fpsCounter.hpp  hud.cpp  hud.hpp  inputs.cpp  inputs.hpp  logger.cpp  logger.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  player.cpp  player.hpp  shader.cpp  shader.hpp  shaders.cpp  shaders.hpp  texture2D.cpp  texture2D.hpp  tickCounter.cpp  tickCounter.hpp  world.cpp  world.hpp
src/math/: aabb.cpp  aabb.hpp  axis.hpp  blockface.hpp  direction.cpp  direction.hpp  intersection.cpp  intersection.hpp  raycast.cpp  raycast.hpp  vectors.cpp  vectors.hpp
src/texturemanip/: atlas.cpp  atlas.hpp  texture2D.cpp  texture2D.hpp
src/world/: block.cpp  block.hpp  blocks.cpp  blocks.hpp  chunk.cpp  chunk.hpp  world.cpp  world.hpp
